Add Migration and Add Entity Configuration

--- a/DiyarTask.Api/appsettings.json
+++ b/DiyarTask.Api/appsettings.json
@@ -1,12 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
-  "DatabaseSettings": {
-    "ConnectionString": "Server=localhost;Port=5432;Database=DiyarTask;User Id=postgres;Password=1991"
-  }
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=AL-ASHQAR;Database=DiyarDb;Trusted_Connection=True;TrustServerCertificate=True;"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
