--- a/DiyarTask.Api/appsettings.Development.json
+++ b/DiyarTask.Api/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=AL-ASHQAR;Database=DiyarDb;Trusted_Connection=True;TrustServerCertificate=True;"
-    },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=DiyarDb;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
