--- a/DiyarTask.Api/appsettings.json
+++ b/DiyarTask.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=AL-ASHQAR;Database=DiyarDb;Trusted_Connection=True;TrustServerCertificate=True;"
+        "DefaultConnection": "Server=localhost;Database=DiyarDb;Trusted_Connection=True;TrustServerCertificate=True;"
     },
     "Logging": {
         "LogLevel": {
