--- a/DiyarTask.Api/appsettings.Development.json
+++ b/DiyarTask.Api/appsettings.Development.json
@@ -2,11 +2,15 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=DiyarDb;Trusted_Connection=True;TrustServerCertificate=True;"
   },
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*",
+  "Hangfire": {
+    "JobId": "DailyDataSendReminderJob",
+    "ScheduleTime": "04:00"
+  }
 }
