--- a/DiyarTask.Api/appsettings.json
+++ b/DiyarTask.Api/appsettings.json
@@ -1,12 +1,16 @@
 {
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=localhost;Database=DiyarDb;Trusted_Connection=True;TrustServerCertificate=True;"
-    },
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=DiyarDb;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*",
+  "Hangfire": {
+    "JobId": "DailyDataSendReminderJob",
+    "ScheduleTime": "04:00"
+  }
 }
